update lik in css

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,7 @@
   .hero.landscape {
     color: white; }
   .hero.bridge {
-    background-image: url("file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/bridge/full-width.jpg");
+    background-image: url("../img/bridge/full-width.jpg");
     width: 100%; }
   .hero h2 {
     margin-top: 100px;
