--- a/styles/main.scss
+++ b/styles/main.scss
@@ -19,7 +19,7 @@ $gallery:#EEFCF9;
     color: white;
   }
   &.bridge {
-    background-image: url("file:///Users/lilianaballesteros/Desktop/codecademy/portfolio/img/bridge/full-width.jpg");
+    background-image: url("../img/bridge/full-width.jpg");
     width: 100%;
   }
   h2 {
@@ -74,7 +74,7 @@ $gallery:#EEFCF9;
 .right-col {
   text-align: left;
   padding: 20px;
-  
+
   h5
   {font-size: 24px;
   line-height: 30px;}}}
