--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,8 +1,91 @@
 $text-shadow:rgba(0,0,0, .25) 0px 5px 5px;
 $back-color:black;
 $color-two:#00E2AC;
-$hover:#00CFFF;
 $gallery:#EEFCF9;
+$light-blue:#00CFFF;
+
+#sidebar-wrapper {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+
+  position: fixed;
+  width: 0px;
+  height: 100%;
+  padding-top: 10px;
+
+  font-family: "Roboto", "serif";
+  color:white;
+  background-color: black;
+  z-index: 2;
+  overflow: hidden;
+
+  transition: all 0.5s ease;
+
+    h2 {
+      font-size: 40px;
+      line-height: 40px;
+      margin: 4px;
+      padding: 0px;
+    }
+    a {
+      color: white;
+      font-size: 24px;
+      margin-left: 10px;
+    }
+      &.open {
+        width: 320px;
+        }
+      .sidebar-links {
+        margin-top: 20px;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+      }
+}
+
+#close-btn{
+  margin-left: 30px;
+  margin-top: 10px;
+  align-self: flex-start;
+
+  color: white;
+  cursor: pointer;
+
+  &:hover{
+    opacity: .5;
+  }
+  img {
+    height: 30px;
+    width: 30px;
+  }
+}
+
+#hamburger{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  position: fixed;
+  height: 34px;
+  width: 40px;
+  left: 30px;
+  top: 20px;
+
+  border-radius: 4px;
+  background-color: black;
+  z-index: 1;
+
+  &:hover{
+    background-color: $light-blue;}
+
+  img{
+    height: 30px;
+    width: 30px;
+  }
+  }
 
 .hero {
   font-family: "Roboto", serif;
@@ -51,7 +134,7 @@ $gallery:#EEFCF9;
   border-radius: 4px;
   cursor: pointer;
 &:hover {
-  background-color: $hover;
+  background-color: $light-blue;
   text-decoration: none;
 }}
 
